# Slavia-backend

./: .env.example  .git-strip-coauthor.py  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Secrets.example.toml  passwords.txt
.github/workflows/: ci.yml  deploy-huggingface-space.yml  error-rate-alert.yml  keep-warm.yml  metrics-scrape-stub.yml
deploy/huggingface/: README.md
docs/: DEPLOY_HUGGINGFACE.md  OBSERVABILITY.md
scripts/: generate-board-bootstrap-templates.mjs  generate-openapi.mjs
scripts/slavia-cms-board-bootstrap/: README.md  _manifest.json
scripts/slavia-cms-board-bootstrap/templates/: admin_board_meeting_protocol.csv  athlete_emergency_contact.csv  coach_session_plan.html  competition_regulations.html  competition_start_list.csv  equipment_inventory.csv  fin_membership_fees.csv  meeting_agenda.html  meeting_resolution.html  org_statute.html
sql/: README.md
sql/migrations/: 20260616_001_performance_indexes.sql
src/: ai_coach_monthly.rs  api_error.rs  athlete_dashboard_acl_integration_test.rs  audit.rs  chat_cleanup.rs  cloudinary.rs  cms_github.rs  cms_sanitize.rs  db.rs  db_migrations.rs  distributed_throttle.rs  external_calendar_sync.rs  http_metrics.rs  import_http_integration_test.rs  integration_test_env.rs  integration_test_http.rs  lib.rs  logging.rs  login_throttle.rs  main.rs  models.rs  notifications.rs  pagination.rs  payments_scheduler.rs  post_throttle.rs  production_guards.rs  router.rs  sinclair.rs  sql_row.rs  sql_util.rs  state.rs  theme_presets.rs  worker_metrics.rs
src/dto/: notifications.rs
src/embed/: backend_root.html  board-templates.json  exercise-dictionary-seed.json  openapi.json
src/logging/: format.rs  macros.rs
src/middleware/: auth.rs  http_access.rs  http_cache.rs  mod.rs  request_id.rs
src/repos/: notifications.rs
src/routes/: admins.rs  ai_coach.rs  ai_coach_settings.rs  announcements.rs  athletes.rs  attendance.rs  attendance_qr.rs  auth.rs  barbell_path_ai.rs  board_documents.rs  calendar_export.rs  challenges.rs  chat.rs  club_feed.rs  club_votes.rs  cms.rs  cms_status.rs  comments.rs  competition_participants.rs  competitions.rs  contact.rs  exercise_submissions.rs  exercises.rs  feature_flags.rs  gallery.rs  import.rs  mobile_releases.rs  mod.rs  notifications.rs  payments.rs  posts.rs  recovery.rs  recurring_training_cancellations.rs  results.rs  role_preview.rs  system_catalogs.rs  system_logs.rs  totp.rs  trainer.rs  training_log.rs  (+2 more)
src/sql/: mod.rs
src/sql/queries/: admins.rs  mod.rs  payments.rs  results.rs  (+1 more)
