[package]
name = "Slavia-backend"
version = "3.2.2-dev"
edition = "2024"

[lib]
name = "slavia_backend"
path = "src/lib.rs"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.9", features = ["macros", "multipart"] }
chrono = { version = "0.4.44", default-features = false, features = ["std", "clock"] }
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
libsql = "0.9.30"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
dotenvy = "0.15.7"
toml = "1.1.2"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "net"] }
tower-http = { version = "0.6.10", features = ["cors", "set-header"] }
uuid = { version = "1.23.1", features = ["v4"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "multipart", "rustls", "form"] }
sha1 = "0.11.0"
hex = "0.4.3"
totp-lite = "2.0.1"
regex = "1.12"
scraper = "0.27.0"
urlencoding = "2.1"
base64 = "0.22"

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }

# Szybsze inkrementalne buildy dev na Windows: mniejszy PDB niż domyślny full debug — nadal sensowny stack trace.
[profile.dev]
debug = "line-tables-only"

# Release pod CI / Leapcell: priorytet krótszego czasu kompilacji przy zachowaniu normalnej jakości optymalizacji runtime.
# — brak LTO (pełne LTO mocno wydłuża linkowanie; dla API zwykle zbędne).
# — wyższe codegen-units = więcej równoległych jednostek codegen (krótszy build; marginalnie mniej agresywne inlining między nimi niż przy `1`).
# — incremental: szybsze przebudowy na tym samym runnerze.
# — strip: mniejszy artefakt, krótszy etap link/publish.
# Pełna optymalizacja LLVM (`opt-level = 3`); bez celowego obniżania wydajności jak przy `opt-level = 2`.
[profile.release]
opt-level = 3
lto = false
codegen-units = 128
incremental = true
panic = "abort"
strip = true

# Zależności (crates.io): Cargo i tak buduje wiele crate’ów równolegle między sobą (`cargo build -j`, domyślnie ~liczba rdzeni).
# Dodatkowo wyższe `codegen-units` *w obrębie każdej* zależności zwiększa równoległość LLVM przy kompilacji dużych paczek (tokio, libsql, rustls…) —
# typowo skraca cold build kosztem minimalnie słabszej optymalizacji *tylko* w kodzie zależności (nie w Twoim API).
# Pakiet `Slavia-backend` nie jest dopasowany przez `"*"` — zostaje `codegen-units = 128` z sekcji wyżej.
[profile.release.package."*"]
codegen-units = 256
